<resources>
    <string name="app_name">App Coleira</string>
    <!-- inicial -->
    <string name="botaobusca">Procurar Animais Por Perto</string>
    <string name="botaocoleira">Interface Coleira</string>

    <!-- Coleira -->
    <string name="botaocadastro">Meu Cadastro</string>
    <string name="botaostatus">STATUS MEU PET</string>
    <string name="botaovoltar_tcol">Voltar</string>

    <!-- Tela Cadastro -->
    <string name="botaonovocad">Novo Cadastro</string>
    <string name="botaoeditcad">Editar Cadastro</string>
    <string name="botaovoltar_tcad">Voltar</string>

    <!-- Tela Mapa Info -->
    <string name="title_activity_tela_info_coleira">Map</string>

    <!-- Tela Mapa Busca -->
    <string name="title_activity_telabusca">Map</string>

    <!-- Tela Novo Cadastro -->
    <string name="tvinfouser_tnc">Sobre Você</string>
    <string name="tvnome_tnc">Nome:</string>
    <string name="tvendereco_tnc">Endereço Completo:</string>
    <string name="tvtelefone_tnc">Telefone:</string>
    <string name="tvinfopet_tnc">Sobre seu Pet</string>
    <string name="tvnomepet_tnc">Nome:</string>
    <string name="tvcodigocol_tnc">Código Coleira:</string>
    <string name="botaosalvar_tnc">Salvar</string>
    <string name="botaovoltar_tnc">Voltar</string>

    <!-- Tela Editar Cadastro -->
    <string name="tvinfouser_tec">Sobre Você</string>
    <string name="tvnome_tec">Nome:</string>
    <string name="tvendereco_tec">Endereço Completo:</string>
    <string name="tvtelefone_tec">Telefone:</string>
    <string name="tvinfopet_tec">Sobre seu Pet</string>
    <string name="tvnomepet_tec">Nome:</string>
    <string name="tvcodigocoleira_tec">Código Coleira:</string>
    <string name="botaosalvar_tec">Salvar</string>
    <string name="botaovoltar_tec">Voltar</string>
    <string name="tv_testeBD">VALOR ID COLEIRA</string>

    <!-- Tela Busca -->
    <string name="botaovoltar_telabusca">Voltar</string>
    <string name="tv_telabusca">Procurando...</string>

    <!-- Tela Info -->
    <string name="tvfirebase">Buscando informações servidor...</string>
    <string name="botaoMapa">Visualizar Mapa</string>
    <string name="botaoVoltarTelaInfo">Voltar</string>
    <string name="title_activity_maps">Map</string>

</resources>
