<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mauri.appcoleira.TelaNovoCadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvinfouser_tnc"
        android:id="@+id/tvinfouser_tnc"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etNome_tnc"
        android:layout_alignEnd="@+id/etNome_tnc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNome_tnc"
        android:layout_below="@+id/tvinfouser_tnc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvinfopet_tnc"
        android:id="@+id/tvinfopet_tnc"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/tvinfouser_tnc"
        android:layout_alignEnd="@+id/tvinfouser_tnc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaovoltar_tnc"
        android:id="@+id/botaovoltar_tnc"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etcod_tnc"
        android:layout_alignEnd="@+id/etcod_tnc"
        android:onClick="back_telacadastro"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaosalvar_tnc"
        android:id="@+id/botaosalvar_tnc"
        android:layout_alignTop="@+id/botaovoltar_tnc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="salvar_tnc"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/ettel_tnc"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/etaddress_tnc"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tvnome_tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etNome_tnc"
        android:layout_alignParentStart="true"
        android:id="@+id/tvnome_tnc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etcod_tnc"
        android:inputType="text"
        android:layout_below="@+id/etNomePet_tnc"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNomePet_tnc"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/tvinfopet_tnc"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tvnomepet_tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvnomepet_tnc"
        android:layout_below="@+id/tvinfopet_tnc"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tvtelefone_tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/tvtelefone_tnc"
        android:layout_below="@+id/etaddress_tnc"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etaddress_tnc"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/tvendereco_tec"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tvendereco_tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvendereco_tec"
        android:layout_below="@+id/etNome_tnc"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/tvcodigocol_tnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvcodigocol_tnc"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/etNomePet_tnc"
        android:layout_alignParentStart="true" />

</RelativeLayout>
