<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mauri.appcoleira.TelaColeira">

    <Button
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:text="@string/botaocadastro"
        android:id="@+id/botaocadastro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="startTelacadastro"/>

    <Button
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:text="@string/botaostatus"
        android:id="@+id/botaostatus"
        android:layout_below="@+id/botaocadastro"
        android:layout_centerHorizontal="true"
        android:onClick="startTelatestefirebase"/>

    <Button
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:text="@string/botaovoltar_tcol"
        android:id="@+id/botaovoltar_tcol"
        android:layout_below="@+id/botaostatus"
        android:layout_centerHorizontal="true"
        android:onClick="back"/>

</RelativeLayout>
