<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_testeleiturafirebase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mauri.appcoleira.InfoFirebase">

    <TextView
        android:text="@string/tvfirebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvfirebase" />

    <Button
        android:text="@string/botaoVoltarTelaInfo"
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:id="@+id/botaoVoltarTelaInfo"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/botaoMapa"
        android:onClick="backTelaColeira_IF"/>

    <Button
        android:text="@string/botaoMapa"
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:id="@+id/botaoMapa"
        android:layout_above="@+id/botaoVoltarTelaInfo"
        android:layout_centerHorizontal="true"
        android:onClick="startMapInfo"/>
</RelativeLayout>
